about and services section responsive overlap issue fixed

--- a/src/app/(landing-page)/(shared-section)/landing-page-style.css
+++ b/src/app/(landing-page)/(shared-section)/landing-page-style.css
@@ -46,9 +46,13 @@
 
 /* skills section end */
 
+/* services section start */
+
 .services-container{
-    @apply grid grid-cols-3 gap-5 justify-center items-center my-5;
+    @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 justify-center items-center my-5;
 }
+
+/* services section end */
 
 /* footer start */
 
